--- a/main_window.ui
+++ b/main_window.ui
@@ -541,9 +541,9 @@
      <widget class="QLineEdit" name="lineEdit_Family_name">
       <property name="geometry">
        <rect>
-        <x>10</x>
+        <x>40</x>
         <y>30</y>
-        <width>271</width>
+        <width>241</width>
         <height>21</height>
        </rect>
       </property>
@@ -551,9 +551,9 @@
      <widget class="QLineEdit" name="lineEdit_bday">
       <property name="geometry">
        <rect>
-        <x>290</x>
+        <x>292</x>
         <y>30</y>
-        <width>113</width>
+        <width>121</width>
         <height>21</height>
        </rect>
       </property>
@@ -591,7 +591,7 @@
      <widget class="QLabel" name="label">
       <property name="geometry">
        <rect>
-        <x>100</x>
+        <x>110</x>
         <y>10</y>
         <width>91</width>
         <height>16</height>
@@ -610,7 +610,7 @@
      <widget class="QLabel" name="label_2">
       <property name="geometry">
        <rect>
-        <x>290</x>
+        <x>300</x>
         <y>10</y>
         <width>111</width>
         <height>20</height>
@@ -815,6 +815,16 @@
       </property>
       <property name="text">
        <string>Рейтинг</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="lineEdit_id">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>30</y>
+        <width>25</width>
+        <height>21</height>
+       </rect>
       </property>
      </widget>
     </widget>
@@ -3366,7 +3376,7 @@
        <x>0</x>
        <y>0</y>
        <width>219</width>
-       <height>345</height>
+       <height>312</height>
       </rect>
      </property>
      <attribute name="label">
@@ -3686,7 +3696,7 @@
        <x>0</x>
        <y>0</y>
        <width>219</width>
-       <height>345</height>
+       <height>312</height>
       </rect>
      </property>
      <attribute name="label">
@@ -3861,7 +3871,7 @@
        <x>0</x>
        <y>0</y>
        <width>219</width>
-       <height>345</height>
+       <height>312</height>
       </rect>
      </property>
      <attribute name="label">
@@ -3874,7 +3884,7 @@
        <x>0</x>
        <y>0</y>
        <width>219</width>
-       <height>345</height>
+       <height>312</height>
       </rect>
      </property>
      <attribute name="label">
@@ -3887,7 +3897,7 @@
        <x>0</x>
        <y>0</y>
        <width>219</width>
-       <height>345</height>
+       <height>312</height>
       </rect>
      </property>
      <attribute name="label">
