--- a/main_window.ui
+++ b/main_window.ui
@@ -3283,6 +3283,83 @@
       <bool>false</bool>
      </property>
     </widget>
+    <widget class="QLabel" name="label_64">
+     <property name="geometry">
+      <rect>
+       <x>80</x>
+       <y>290</y>
+       <width>91</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Times New Roman</family>
+       <italic>true</italic>
+      </font>
+     </property>
+     <property name="text">
+      <string>Субъекты РФ</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="Button_fltr_list">
+     <property name="geometry">
+      <rect>
+       <x>8</x>
+       <y>610</y>
+       <width>107</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Применить фильтр</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="Button_reset_fltr_list">
+     <property name="geometry">
+      <rect>
+       <x>118</x>
+       <y>610</y>
+       <width>107</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Сброс фильтра</string>
+     </property>
+    </widget>
+    <widget class="QComboBox" name="comboBox_fltr_city">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>370</y>
+       <width>201</width>
+       <height>26</height>
+      </rect>
+     </property>
+     <property name="editable">
+      <bool>false</bool>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_65">
+     <property name="geometry">
+      <rect>
+       <x>100</x>
+       <y>350</y>
+       <width>61</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Times New Roman</family>
+       <italic>true</italic>
+      </font>
+     </property>
+     <property name="text">
+      <string>Город</string>
+     </property>
+    </widget>
    </widget>
    <widget class="QTableWidget" name="tableWidget">
     <property name="geometry">
@@ -3388,8 +3465,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>98</width>
-       <height>28</height>
+       <width>100</width>
+       <height>30</height>
       </rect>
      </property>
      <attribute name="label">
@@ -3444,7 +3521,7 @@
        <x>0</x>
        <y>0</y>
        <width>219</width>
-       <height>312</height>
+       <height>306</height>
       </rect>
      </property>
      <attribute name="label">
@@ -3708,8 +3785,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>98</width>
-       <height>28</height>
+       <width>100</width>
+       <height>30</height>
       </rect>
      </property>
      <attribute name="label">
@@ -3883,8 +3960,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>98</width>
-       <height>28</height>
+       <width>100</width>
+       <height>30</height>
       </rect>
      </property>
      <attribute name="label">
@@ -3896,8 +3973,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>98</width>
-       <height>28</height>
+       <width>100</width>
+       <height>30</height>
       </rect>
      </property>
      <attribute name="label">
@@ -3909,8 +3986,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>98</width>
-       <height>28</height>
+       <width>100</width>
+       <height>30</height>
       </rect>
      </property>
      <attribute name="label">
