--- a/main_window.ui
+++ b/main_window.ui
@@ -3306,26 +3306,39 @@
      <property name="geometry">
       <rect>
        <x>8</x>
-       <y>610</y>
+       <y>600</y>
        <width>107</width>
        <height>23</height>
       </rect>
      </property>
+     <property name="font">
+      <font>
+       <family>Times</family>
+       <pointsize>13</pointsize>
+       <italic>true</italic>
+      </font>
+     </property>
      <property name="text">
-      <string>Применить фильтр</string>
+      <string>Применить</string>
      </property>
     </widget>
     <widget class="QPushButton" name="Button_reset_fltr_list">
      <property name="geometry">
       <rect>
        <x>118</x>
-       <y>610</y>
+       <y>600</y>
        <width>107</width>
        <height>23</height>
       </rect>
      </property>
+     <property name="font">
+      <font>
+       <family>Times</family>
+       <italic>true</italic>
+      </font>
+     </property>
      <property name="text">
-      <string>Сброс фильтра</string>
+      <string>Сбросить</string>
      </property>
     </widget>
     <widget class="QComboBox" name="comboBox_fltr_city">
@@ -3358,6 +3371,45 @@
      </property>
      <property name="text">
       <string>Город</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="lineEdit">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>430</y>
+       <width>201</width>
+       <height>21</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_66">
+     <property name="geometry">
+      <rect>
+       <x>90</x>
+       <y>400</y>
+       <width>61</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Times New Roman</family>
+       <italic>true</italic>
+      </font>
+     </property>
+     <property name="text">
+      <string>Тренеры</string>
+     </property>
+    </widget>
+    <widget class="QComboBox" name="comboBox">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>454</y>
+       <width>203</width>
+       <height>26</height>
+      </rect>
      </property>
     </widget>
    </widget>
@@ -3521,7 +3573,7 @@
        <x>0</x>
        <y>0</y>
        <width>219</width>
-       <height>306</height>
+       <height>312</height>
       </rect>
      </property>
      <attribute name="label">
@@ -3689,7 +3741,7 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>30</y>
+        <y>25</y>
         <width>150</width>
         <height>32</height>
        </rect>
@@ -3708,7 +3760,7 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>55</y>
+        <y>50</y>
         <width>150</width>
         <height>32</height>
        </rect>
@@ -3774,6 +3826,30 @@
       </property>
       <property name="text">
        <string>Должники R</string>
+      </property>
+      <property name="checkable">
+       <bool>true</bool>
+      </property>
+     </widget>
+     <widget class="QCheckBox" name="checkBox_12">
+      <property name="geometry">
+       <rect>
+        <x>16</x>
+        <y>80</y>
+        <width>111</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Times</family>
+        <pointsize>13</pointsize>
+        <weight>50</weight>
+        <bold>false</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>Поиск</string>
       </property>
       <property name="checkable">
        <bool>true</bool>
