--- a/main_window.ui
+++ b/main_window.ui
@@ -3354,6 +3354,9 @@
      <property name="editable">
       <bool>false</bool>
      </property>
+     <property name="insertPolicy">
+      <enum>QComboBox::InsertAlphabetically</enum>
+     </property>
     </widget>
     <widget class="QLabel" name="label_65">
      <property name="geometry">
@@ -3535,7 +3538,7 @@
        <x>0</x>
        <y>0</y>
        <width>219</width>
-       <height>306</height>
+       <height>312</height>
       </rect>
      </property>
      <attribute name="label">
