--- a/main_window.ui
+++ b/main_window.ui
@@ -2843,7 +2843,7 @@
      <enum>QFrame::StyledPanel</enum>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>6</number>
     </property>
     <widget class="QWidget" name="page">
      <property name="geometry">
@@ -4088,7 +4088,7 @@
         <x>10</x>
         <y>10</y>
         <width>191</width>
-        <height>181</height>
+        <height>241</height>
        </rect>
       </property>
       <property name="font">
@@ -4104,7 +4104,7 @@
        <property name="geometry">
         <rect>
          <x>3</x>
-         <y>145</y>
+         <y>200</y>
          <width>92</width>
          <height>32</height>
         </rect>
@@ -4168,7 +4168,7 @@
        <property name="geometry">
         <rect>
          <x>90</x>
-         <y>145</y>
+         <y>200</y>
          <width>85</width>
          <height>32</height>
         </rect>
@@ -4217,6 +4217,26 @@
        </property>
        <property name="editable">
         <bool>false</bool>
+       </property>
+      </widget>
+      <widget class="QComboBox" name="comboBox_select_tours">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>140</y>
+         <width>91</width>
+         <height>26</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="lineEdit_range_tours">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>170</y>
+         <width>161</width>
+         <height>21</height>
+        </rect>
        </property>
       </widget>
      </widget>
